# api-flight/spring-server/src/main/resources/api-spec.yaml
@@ -74,7 +74,7 @@ paths:
               $ref: '#/definitions/Passenger'
         404:
           description: passenger not found
-  /passenger/create:
+  /passenger:
     post:
       description: Create a passenger
       operationId: createPassenger
@@ -157,7 +157,7 @@ paths:
               $ref: '#/definitions/Flight'
         404:
           description: passenger not found
-  /flight/create:
+  /flight:
     post:
       description: Create a flight
       operationId: createFlight
@@ -174,31 +174,74 @@ paths:
           description: created
           schema:
             type: object
-  /passengerHasFlight/create:
+    get:
+      description: Get flights (pages)
+      operationId: getFlights
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: number
+          description: Number of the page
+          required: true
+          type: integer
+        - in: query
+          name: size
+          description: Size of the page
+          required: true
+          type: integer
+      responses:
+        '201':
+          description: success
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Flight'
+  /flight/passenger:
+    get:
+      description: Get flights of a passenger
+      operationId: getFlightsOfPassenger
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: passenger Id
+          description: Id of the passenger
+          required: true
+          type: integer
+      responses:
+        '201':
+          description: success
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Flight'
+
+  /booking:
     post:
       description: Bind a passenger to a flight
-      operationId: setPassengerHasFlight
+      operationId: setBooking
       consumes:
         - application/json
       parameters:
         - in: body
-          name: PassengerHasFlight
+          name: Booking
           required: true
           schema:
-            $ref: '#/definitions/PassengerHasFlight'
+            $ref: '#/definitions/Booking'
       responses:
         '201':
           description: Passenger bind to flight
           schema:
             type: object
-  /passengerHasFlight/{id}:
+  /booking/{id}:
     delete:
-      description: Delete passenger has flight by Id
-      operationId: deletePassengerHasFlightById
+      description: Delete booking by Id
+      operationId: deleteBookingtById
       parameters:
         - in: path
           name: id
-          description: PassengerHasFlight id
+          description: Booking id
           required: true
           type: integer
       produces:
@@ -209,9 +252,35 @@ paths:
           schema:
             type: object
             items:
-              $ref: '#/definitions/PassengerHasFlight'
+              $ref: '#/definitions/Booking'
         404:
           description: flight not found
+    get:
+      description: Get all bookings for a passenger (pages)
+      operationId: getBookings
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: id
+          description: Passenger id
+          required: true
+          type: integer
+        - in: query
+          name: number
+          description: Number of the page
+          required: true
+          type: integer
+        - in: query
+          name: size
+          description: Size of the page
+          required: true
+          type: integer
+      responses:
+        '201':
+          description: success
+          schema:
+            type: object
 definitions:
   Passenger:
     type: object
@@ -233,7 +302,7 @@ definitions:
         type: string
       time:
         type: string
-  PassengerHasFlight:
+  Booking:
     type: object
     properties:
       id:
